src/styles/main.scss
// VARIABLES

$brand-success: #4F9D69;
$brand-primary: #62929E;
$brand-info: #A0CFD3;

@import url(http://fonts.googleapis.com/css?family=Poiret+One);
@import "bootstrap";

// MIXINS

@mixin box_shadow {
	box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.15);
}

@mixin transition {
	transition: 300ms all ease-in-out;
}

@mixin transition_short {
	transition: 150ms all ease-in-out;
}

// GENERAL STYLES

* {
	font-family: 'Poiret One', 'serif';
	font-size: 26px;
}

html, body {
	height: 100%;
	overflow: hidden;
	background-color: $brand-info;
}

.ramjet-hidden {
	opacity: 1;
}

.panel {
	@include box_shadow;
	border-radius: 0;
}

// TYPOGRAPHY

h1 {
	font-size: 2em;
}

// SECTIONS
// Overlay

.overlay {
	@include transition;
	position: absolute;
	overflow-y: scroll;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	width: 100%;
	padding: 50px;
	background-color: $brand-success;
	z-index: 100;
	h1, p {
		@include box_shadow;
		padding: 10px;
		background-color: #fff;
		display: inline-block;
	}
}

.overlay-hide {
	position: fixed;
	transform: translate(0, -100%);
}
// Flags
.flag {
  @include box_shadow;
  padding: 5px;
  background-color: #fff;
  margin: 20px 0px;
  display: inline-block;
}

.flag-img {
  margin: 0 auto;
}
// Scoreboard
header {
  @include box_shadow;
  background-color: $brand-success;  
  position: relative;
  z-index: 90;
}

.score-tab {
  @include box_shadow;
  margin: 10px 0;
  display: inline-block;
  background-color: #fff;
  padding: 5px;
  height: 100px;
}

.score-board {
  overflow: hidden;
  padding: 5px;
  display: inline-block;
}

.score {
  margin: 0 10px;
}

// Tactic setup
.tactic-setup {
	@include box_shadow;
	@include transition;
	background-color: darken($brand-success, 10%);
	color: #fff;
	position: absolute;
	overflow-y: auto;
	top: 120px;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 80;
	.panel-body {
		color: #000;
	}
}
.tactic-setup-hide {
	transform: translate(0, calc(-100% + 50px));
}
.btn-tactic {
	@include box_shadow;
	@include transition_short;
	border-radius: 0;
	border: none;
	background-color: #fff;
	color: #000;
	font-size: 1.1em;
}

